WIP. Fixed dumb typo that was breaking trenchwise analysis.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180722 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180722 Trench segmentation.ipynb
@@ -759,6 +759,7 @@
     "\n",
     "segmentation_channel = \"MCHERRY\"\n",
     "reporter_channels = [\"MCHERRY\", \"YFP\"]\n",
+    "\n",
     "all_frames_t = all_frames.groupby([\"filename\", \"position\"])\n",
     "# for frame_idx, trenches in take(2, util.iter_index(selected_trenches_all.groupby(['filename', 'position']))):\n",
     "# for frame_idx, trenches in take(2, util.iter_index(selected_trenches_index.to_series().groupby(['filename', 'position']))):\n",
@@ -793,7 +794,9 @@
     "            }\n",
     "            trench_trenchwise_df = pd.concat(\n",
     "                {\n",
-    "                    channel: workflow.map_frame(trenchwise_funcs, images[channel])\n",
+    "                    channel: workflow.map_frame(\n",
+    "                        trenchwise_funcs, trench_images[channel]\n",
+    "                    )\n",
     "                    for channel in reporter_channels\n",
     "                },\n",
     "                axis=0,\n",
@@ -838,6 +841,183 @@
     "labelwise_df.index.names = [\"filename\", \"position\", *labelwise_df.index.names[2:]]\n",
     "display(trenchwise_df)\n",
     "display(labelwise_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stream segmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labelwise_funcs = {\n",
+    "    \"mean\": np.mean,\n",
+    "    \"min\": np.min,\n",
+    "    \"max\": np.max,\n",
+    "    (\"p0.1\", \"p0.3\", \"p0.5\", \"p0.7\", \"p0.9\"): partial(\n",
+    "        np.percentile, q=(0.1, 0.3, 0.5, 0.7, 0.9)\n",
+    "    ),\n",
+    "}\n",
+    "trenchwise_funcs = {\"sharpness\": image.sharpness, **labelwise_funcs}\n",
+    "framewise_funcs = {\"sharpness\": image.sharpness, **labelwise_funcs}\n",
+    "\n",
+    "segmentation_channel = \"MCHERRY\"\n",
+    "reporter_channels = [\"MCHERRY\", \"YFP\"]\n",
+    "\n",
+    "\n",
+    "def per_trench(trench_idx, uls, lrs, channels):\n",
+    "    ul = uls[trench_idx]\n",
+    "    lr = lrs[trench_idx]\n",
+    "    trench_images = {\n",
+    "        channel: images[channel][ul[1] : lr[1] + 1, ul[0] : lr[0] + 1]\n",
+    "        for channel in channels\n",
+    "    }\n",
+    "    trench_trenchwise_df = pd.concat(\n",
+    "        {\n",
+    "            channel: workflow.map_frame(trenchwise_funcs, trench_images[channel])\n",
+    "            for channel in reporter_channels\n",
+    "        },\n",
+    "        axis=0,\n",
+    "    )\n",
+    "    return trench_trenchwise_df\n",
+    "\n",
+    "\n",
+    "def finalize_trench(trench_trenchwise_dfs):\n",
+    "    position_t_trenchwise_df = pd.concat(trench_trenchwise_dfs, axis=1).T\n",
+    "    position_t_trenchwise_df.index.name = \"trench\"\n",
+    "    return position_t_trenchwise_df\n",
+    "\n",
+    "\n",
+    "def finalize_position_t(position_t_trenchwise_df):\n",
+    "    position_trenchwise_df = pd.concat(position_t_trenchwise_dfs, axis=0)\n",
+    "    position_trenchwise_df.index.set_names(\"t\", level=0, inplace=True)\n",
+    "    return position_trenchwise_df\n",
+    "\n",
+    "\n",
+    "def finalize(position_trenchwise_dfs):\n",
+    "    trenchwise_df = pd.concat(position_trenchwise_dfs, axis=0)\n",
+    "    trenchwise_df.index.names = [\"filename\", \"position\", *trenchwise_df.index.names[2:]]\n",
+    "    return trenchwise_df\n",
+    "\n",
+    "\n",
+    "all_frames_t = all_frames.groupby([\"filename\", \"position\"])\n",
+    "position_trenchwise_dfs = {}\n",
+    "for frame_idx, trenches in take(\n",
+    "    2, util.iter_index(selected_trenches_segmentation.groupby([\"filename\", \"position\"]))\n",
+    "):\n",
+    "    uls = trenches[\"upper_left\"].values\n",
+    "    lrs = trenches[\"lower_right\"].values\n",
+    "    trench_idxs = trenches.index.get_level_values(\"trench\")\n",
+    "    fp_frames = all_frames_t.get_group((frame_idx.filename, frame_idx.position))\n",
+    "    position_t_trenchwise_dfs = {}\n",
+    "    position_t_labelwise_dfs = {}\n",
+    "    for t, frames in take(2, fp_frames.groupby(\"t\")):\n",
+    "        channels = {segmentation_channel, *reporter_channels}\n",
+    "        images = {\n",
+    "            channel: workflow.get_nd2_frame(channel=channel, t=t, **frame_idx._asdict())\n",
+    "            for channel in channels\n",
+    "        }\n",
+    "        trench_trenchwise_dfs = {}\n",
+    "        for trench_idx in take(2, trench_idxs):\n",
+    "            trench_trenchwise_dfs[trench_idx] = per_trench(\n",
+    "                trench_idx, uls, lrs, channels\n",
+    "            )\n",
+    "        position_t_trenchwise_dfs[t] = finalize_trench(trench_trenchwise_dfs)\n",
+    "    position_trenchwise_dfs[tuple(frame_idx)] = finalize_position_t(\n",
+    "        position_t_trenchwise_dfs\n",
+    "    )\n",
+    "trenchwise_df = finalize(position_trenchwise_dfs)\n",
+    "display(trenchwise_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labelwise_funcs = {\n",
+    "    \"mean\": np.mean,\n",
+    "    \"min\": np.min,\n",
+    "    \"max\": np.max,\n",
+    "    (\"p0.1\", \"p0.3\", \"p0.5\", \"p0.7\", \"p0.9\"): partial(\n",
+    "        np.percentile, q=(0.1, 0.3, 0.5, 0.7, 0.9)\n",
+    "    ),\n",
+    "}\n",
+    "trenchwise_funcs = {\"sharpness\": image.sharpness, **labelwise_funcs}\n",
+    "framewise_funcs = {\"sharpness\": image.sharpness, **labelwise_funcs}\n",
+    "\n",
+    "segmentation_channel = \"MCHERRY\"\n",
+    "reporter_channels = [\"MCHERRY\", \"YFP\"]\n",
+    "\n",
+    "\n",
+    "def per_trench(trench_idx, uls, lrs, images, channels, reporter_channels=None):\n",
+    "    ul = uls[trench_idx]\n",
+    "    lr = lrs[trench_idx]\n",
+    "    trench_images = {\n",
+    "        channel: images[channel][ul[1] : lr[1] + 1, ul[0] : lr[0] + 1]\n",
+    "        for channel in channels\n",
+    "    }\n",
+    "    trench_trenchwise_df = pd.concat(\n",
+    "        {\n",
+    "            channel: workflow.map_frame(trenchwise_funcs, trench_images[channel])\n",
+    "            for channel in reporter_channels\n",
+    "        },\n",
+    "        axis=0,\n",
+    "    )\n",
+    "    return trench_trenchwise_df\n",
+    "\n",
+    "\n",
+    "def per_t(frame_idx, t, trench_idxs, uls, lrs, channels=None, per_trench_func=None):\n",
+    "    images = {\n",
+    "        channel: workflow.get_nd2_frame(channel=channel, t=t, **frame_idx._asdict())\n",
+    "        for channel in channels\n",
+    "    }\n",
+    "    trench_dfs = {}\n",
+    "    for trench_idx in take(2, trench_idxs):\n",
+    "        trench_dfs[trench_idx] = per_trench_func(trench_idx, uls, lrs, images, channels)\n",
+    "    df = pd.concat(trench_dfs, axis=1).T\n",
+    "    df.index.name = \"trench\"\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def finalize(dfs):\n",
+    "    trenchwise_df = pd.concat(dfs, axis=0)\n",
+    "    trenchwise_df.index.names = [\n",
+    "        \"filename\",\n",
+    "        \"position\",\n",
+    "        \"t\",\n",
+    "        *trenchwise_df.index.names[3:],\n",
+    "    ]\n",
+    "    return trenchwise_df\n",
+    "\n",
+    "\n",
+    "channels = {segmentation_channel, *reporter_channels}\n",
+    "per_t_func = partial(\n",
+    "    per_t,\n",
+    "    channels=channels,\n",
+    "    per_trench_func=partial(per_trench, reporter_channels=reporter_channels),\n",
+    ")\n",
+    "\n",
+    "all_frames_t = all_frames.groupby([\"filename\", \"position\"])\n",
+    "dfs = {}\n",
+    "for frame_idx, trenches in take(\n",
+    "    2, util.iter_index(selected_trenches_segmentation.groupby([\"filename\", \"position\"]))\n",
+    "):\n",
+    "    uls = trenches[\"upper_left\"].values\n",
+    "    lrs = trenches[\"lower_right\"].values\n",
+    "    trench_idxs = trenches.index.get_level_values(\"trench\")\n",
+    "    fp_frames = all_frames_t.get_group((frame_idx.filename, frame_idx.position))\n",
+    "    for t, frames in take(2, fp_frames.groupby(\"t\")):\n",
+    "        dfs[(*frame_idx, t)] = per_t_func(frame_idx, t, trench_idxs, uls, lrs)\n",
+    "trenchwise_df = finalize(dfs)\n",
+    "display(trenchwise_df)"
    ]
   },
   {
