First cut of analysis workflow in notebook.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180723 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180723 Trench segmentation.ipynb
@@ -1026,54 +1026,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labelwise_funcs = {\n",
-    "    \"mean\": np.mean,\n",
-    "    \"min\": np.min,\n",
-    "    \"max\": np.max,\n",
-    "    (\"p0.1\", \"p0.3\", \"p0.5\", \"p0.7\", \"p0.9\"): partial(\n",
-    "        np.percentile, q=(0.1, 0.3, 0.5, 0.7, 0.9)\n",
-    "    ),\n",
-    "}\n",
-    "trenchwise_funcs = {\"sharpness\": image.sharpness, **labelwise_funcs}\n",
-    "framewise_funcs = {\"sharpness\": image.sharpness, **labelwise_funcs}\n",
-    "\n",
-    "segmentation_channel = \"MCHERRY\"\n",
-    "reporter_channels = [\"MCHERRY\", \"YFP\"]\n",
-    "\n",
-    "\n",
-    "def _get_trench_crops(trench_idx, images, uls, rls):\n",
-    "    ul = uls[trench_idx]\n",
-    "    lr = lrs[trench_idx]\n",
-    "    trench_images = {\n",
-    "        channel: images[channel][ul[1] : lr[1] + 1, ul[0] : lr[0] + 1]\n",
-    "        for channel in images.keys()\n",
-    "    }\n",
-    "    return trench_images\n",
-    "\n",
-    "\n",
-    "def per_trench(\n",
-    "    trench_idx,\n",
-    "    uls,\n",
-    "    lrs,\n",
-    "    images,\n",
-    "    channels,\n",
-    "    reporter_channels=None,\n",
-    "    framewise_funcs=None,\n",
+    "def _analyze_trench(\n",
+    "    trench_images,\n",
+    "    channels=None,\n",
     "    trenchwise_funcs=None,\n",
     "    labelwise_funcs=None,\n",
     "    regionprops=True,\n",
     "):\n",
-    "    trench_images = _get_trench_crops(images, trench_idx, uls, rls)\n",
-    "    if framewise_funcs:\n",
-    "        framewise_df = pd.concat(\n",
-    "            {\n",
-    "                channel: workflow.map_frame(framewise_funcs, images[channel])\n",
-    "                for channel in reporter_channels\n",
-    "            },\n",
-    "            axis=0,\n",
-    "        )\n",
-    "    else:\n",
-    "        framewise_df = None\n",
     "    if trenchwise_funcs:\n",
     "        trenchwise_df = pd.concat(\n",
     "            {\n",
@@ -1107,61 +1066,157 @@
     "        )\n",
     "    else:\n",
     "        labelwise_df = None\n",
-    "    return framewise_df, trenchwise_df, labelwise_df\n",
+    "    return trenchwise_df, labelwise_df\n",
     "\n",
     "\n",
-    "def per_t(frame_idx, t, trench_idxs, uls, lrs, channels=None, per_trench_func=None):\n",
+    "def _get_trench_crops(images, trench_idx, uls, lrs):\n",
+    "    ul = uls[trench_idx]\n",
+    "    lr = lrs[trench_idx]\n",
+    "    trench_images = {\n",
+    "        channel: images[channel][ul[1] : lr[1] + 1, ul[0] : lr[0] + 1]\n",
+    "        for channel in images.keys()\n",
+    "    }\n",
+    "    return trench_images\n",
+    "\n",
+    "\n",
+    "def analyze_trenches(\n",
+    "    frame_idx,\n",
+    "    t,\n",
+    "    trenches,\n",
+    "    channels=None,\n",
+    "    framewise_funcs=None,\n",
+    "    trenchwise_funcs=None,\n",
+    "    labelwise_funcs=None,\n",
+    "    regionprops=True,\n",
+    "):\n",
+    "    trench_idxs = trenches.index.get_level_values(\"trench\")\n",
+    "    uls = trenches[\"upper_left\"].values\n",
+    "    lrs = trenches[\"lower_right\"].values\n",
     "    images = {\n",
     "        channel: workflow.get_nd2_frame(channel=channel, t=t, **frame_idx._asdict())\n",
     "        for channel in channels\n",
     "    }\n",
-    "    trench_dfs = {}\n",
+    "    if framewise_funcs:\n",
+    "        framewise_df = pd.concat(\n",
+    "            {\n",
+    "                channel: workflow.map_frame(framewise_funcs, images[channel])\n",
+    "                for channel in reporter_channels\n",
+    "            },\n",
+    "            axis=0,\n",
+    "        )\n",
+    "    else:\n",
+    "        framewise_df = None\n",
+    "    trenchwise_dfs = {}\n",
+    "    labelwise_dfs = {}\n",
     "    for trench_idx in take(2, trench_idxs):\n",
-    "        trench_dfs[trench_idx] = per_trench_func(trench_idx, uls, lrs, images, channels)\n",
-    "    df = pd.concat(trench_dfs, axis=1).T\n",
-    "    df.index.name = \"trench\"\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "def finalize(dfs):\n",
-    "    trenchwise_df = pd.concat(dfs, axis=0)\n",
-    "    trenchwise_df.index.names = [\n",
+    "        trench_images = _get_trench_crops(images, trench_idx, uls, lrs)\n",
+    "        trench_trenchwise_df, trench_labelwise_df = _analyze_trench(\n",
+    "            trench_images,\n",
+    "            channels=channels,\n",
+    "            trenchwise_funcs=trenchwise_funcs,\n",
+    "            labelwise_funcs=labelwise_funcs,\n",
+    "        )\n",
+    "        trenchwise_dfs[(*frame_idx, t, trench_idx)] = trench_trenchwise_df\n",
+    "        labelwise_dfs[(*frame_idx, t, trench_idx)] = trench_labelwise_df\n",
+    "    framewise_df = pd.concat({(*frame_idx, t): framewise_df}, axis=1).T\n",
+    "    trenchwise_df = pd.concat(trenchwise_dfs, axis=1).T\n",
+    "    labelwise_df = pd.concat(labelwise_dfs, axis=0)\n",
+    "    framewise_df.index.names = [\n",
     "        \"filename\",\n",
     "        \"position\",\n",
     "        \"t\",\n",
-    "        *trenchwise_df.index.names[3:],\n",
+    "        *framewise_df.index.names[3:],\n",
     "    ]\n",
-    "    return trenchwise_df\n",
+    "    for df in (trenchwise_df, labelwise_df):\n",
+    "        df.index.names = [\"filename\", \"position\", \"t\", \"trench\", *df.index.names[4:]]\n",
+    "    return framewise_df, trenchwise_df, labelwise_df\n",
     "\n",
     "\n",
-    "def do_analysis(selected_trenches, all_frames, per_t_func=None):\n",
+    "def analyze_frames_and_trenches(selected_trenches, all_frames, func):\n",
     "    all_frames_t = all_frames.groupby([\"filename\", \"position\"])\n",
-    "    dfs = {}\n",
+    "    res = []\n",
     "    for frame_idx, trenches in take(\n",
     "        2, util.iter_index(selected_trenches.groupby([\"filename\", \"position\"]))\n",
     "    ):\n",
-    "        uls = trenches[\"upper_left\"].values\n",
-    "        lrs = trenches[\"lower_right\"].values\n",
-    "        trench_idxs = trenches.index.get_level_values(\"trench\")\n",
     "        fp_frames = all_frames_t.get_group((frame_idx.filename, frame_idx.position))\n",
     "        for t, frames in take(2, fp_frames.groupby(\"t\")):\n",
-    "            dfs[(*frame_idx, t)] = per_t_func(frame_idx, t, trench_idxs, uls, lrs)\n",
-    "    trenchwise_df = finalize(dfs)\n",
-    "    return trenchwise_df\n",
+    "            res.append(func(frame_idx, t, trenches))\n",
+    "    return [\n",
+    "        pd.concat(filter(lambda x: x is not None, dfs), axis=0) for dfs in zip(*res)\n",
+    "    ]\n",
     "\n",
     "\n",
-    "channels = {segmentation_channel, *reporter_channels}\n",
-    "per_t_func = partial(\n",
-    "    per_t,\n",
-    "    channels=channels,\n",
-    "    per_trench_func=partial(per_trench, reporter_channels=reporter_channels),\n",
+    "labelwise_funcs = {\n",
+    "    \"mean\": np.mean,\n",
+    "    \"min\": np.min,\n",
+    "    \"max\": np.max,\n",
+    "    (\"p0.1\", \"p0.3\", \"p0.5\", \"p0.7\", \"p0.9\"): partial(\n",
+    "        np.percentile, q=(0.1, 0.3, 0.5, 0.7, 0.9)\n",
+    "    ),\n",
+    "}\n",
+    "trenchwise_funcs = {\"sharpness\": image.sharpness, **labelwise_funcs}\n",
+    "framewise_funcs = {\"sharpness\": image.sharpness, **labelwise_funcs}\n",
+    "\n",
+    "analyze_channels = [\"MCHERRY\", \"YFP\"]\n",
+    "\n",
+    "res0 = analyze_frames_and_trenches(\n",
+    "    selected_trenches_segmentation,\n",
+    "    all_frames,\n",
+    "    partial(\n",
+    "        analyze_trenches,\n",
+    "        channels=analyze_channels,\n",
+    "        framewise_funcs=framewise_funcs,\n",
+    "        trenchwise_funcs=trenchwise_funcs,\n",
+    "        labelwise_funcs=labelwise_funcs,\n",
+    "    ),\n",
     ")\n",
     "\n",
-    "trenchwise_df = do_analysis(\n",
-    "    selected_trenches_segmentation, all_frames, per_t_func=per_t_func\n",
-    ")\n",
-    "\n",
-    "display(trenchwise_df)"
+    "# display(trenchwise_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res0[2].tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(res0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res0[1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res0[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_trenches_segmentation.head(10)"
    ]
   },
   {
