ReMultiIndexStream as a much faster alternative to DataFrameStream when index can be lexsorted. Lightly edited dataframe_browser to be compatible with both. named DataframeStream to DataFrameStream.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180726 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180726 Trench segmentation.ipynb
@@ -1169,8 +1169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_stream_df = labelwise_df.index.to_frame(index=False)\n",
-    "LabelStream = ui.DataframeStream.define(\"LabelStream\", label_stream_df)\n",
+    "LabelStream = ui.MultiIndexStream.define(\"LabelStream\", labelwise_df.index)\n",
     "label_stream = LabelStream()\n",
     "\n",
     "box = ui.dataframe_browser(label_stream)\n",
@@ -1184,18 +1183,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workflow.get_trench_image(\n",
-    "    channel=\"MCHERRY\",\n",
-    "    **util.get_keys(\n",
-    "        label_stream.contents,\n",
-    "        \"filename\",\n",
-    "        \"position\",\n",
-    "        \"t\",\n",
-    "        \"trench_set\",\n",
-    "        \"trench\",\n",
-    "        \"label\",\n",
-    "    ),\n",
-    ")"
+    "def _trench_callback(filename, position, t, trench_set, trench, **kwargs):\n",
+    "    return ui._trench_img(\n",
+    "        workflow.get_trench_image(\n",
+    "            trench_bboxes, filename, position, \"MCHERRY\", t, trench_set, trench\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "keys = [\"filename\", \"position\", \"t\", \"trench_set\", \"trench\"]\n",
+    "ui.image_viewer(label_stream, image_callback=_trench_callback, regrid=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit workflow.get_trench_image(trench_bboxes, channel='MCHERRY', **util.get_keys(label_stream.contents, 'filename', 'position', 't', 'trench_set', 'trench'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%lprun -f"
    ]
   },
   {
@@ -1281,35 +1296,6 @@
    "source": [
     "g = ui.show_grid(selected, stream=frame_stream)\n",
     "g"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tp, diag, _ = diagnostics.wrap_diagnostics(\n",
-    "    trench_detection.hough.find_trenches, ignore_exceptions=False\n",
-    ")(frame_rot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.show_plot_browser(diag)"
    ]
   },
   {
