--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180726 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180726 Trench segmentation.ipynb
@@ -1183,16 +1183,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _trench_callback(filename, position, t, trench_set, trench, **kwargs):\n",
-    "    return ui._trench_img(\n",
-    "        workflow.get_trench_image(\n",
-    "            trench_bboxes, filename, position, \"MCHERRY\", t, trench_set, trench\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "keys = [\"filename\", \"position\", \"t\", \"trench_set\", \"trench\"]\n",
-    "ui.image_viewer(label_stream, image_callback=_trench_callback, regrid=False)"
+    "%%opts Layout [normalize=False]\n",
+    "(\n",
+    "    ui.trench_viewer(trench_bboxes, label_stream, channel=\"MCHERRY\")\n",
+    "    + ui.trench_viewer(trench_bboxes, label_stream, channel=\"YFP\")\n",
+    ").cols(1)"
    ]
   },
   {
