get_trench_set_image and trench_set_viewer.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180726 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180726 Trench segmentation.ipynb
@@ -1184,6 +1184,20 @@
    "outputs": [],
    "source": [
     "%%opts Layout [normalize=False]\n",
+    "%%opts Image [width=500 height=100]\n",
+    "(\n",
+    "    ui.trench_set_viewer(trench_bboxes, label_stream, channel=\"MCHERRY\")\n",
+    "    + ui.trench_set_viewer(trench_bboxes, label_stream, channel=\"YFP\")\n",
+    ").cols(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Layout [normalize=False]\n",
     "(\n",
     "    ui.trench_viewer(trench_bboxes, label_stream, channel=\"MCHERRY\")\n",
     "    + ui.trench_viewer(trench_bboxes, label_stream, channel=\"YFP\")\n",
