get_trench_set_overlay. Split off regridding func into recursive_regrid.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180726 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180726 Trench segmentation.ipynb
@@ -1184,7 +1184,7 @@
    "outputs": [],
    "source": [
     "%%opts Layout [normalize=False]\n",
-    "%%opts Image [width=500 height=100]\n",
+    "%%opts Image [width=800 height=150]\n",
     "(\n",
     "    ui.trench_set_viewer(trench_bboxes, label_stream, channel=\"MCHERRY\")\n",
     "    + ui.trench_set_viewer(trench_bboxes, label_stream, channel=\"YFP\")\n",
@@ -1210,7 +1210,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%timeit workflow.get_trench_image(trench_bboxes, channel='MCHERRY', **util.get_keys(label_stream.contents, 'filename', 'position', 't', 'trench_set', 'trench'))"
+    "%lprun -f workflow.get_trench_set_overlay workflow.get_trench_set_overlay(trench_bboxes, channel='MCHERRY', **util.get_keys(label_stream.contents, 'filename', 'position', 't', 'trench_set', 'trench'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit workflow.get_trench_set_overlay(trench_bboxes, channel='MCHERRY', **util.get_keys(label_stream.contents, 'filename', 'position', 't', 'trench_set', 'trench'))"
    ]
   },
   {
