--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180731 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180731 Trench segmentation.ipynb
@@ -130,13 +130,13 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"01:00:00\",\n",
+    "    walltime=\"00:30:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # interface='ib0',\n",
-    "    memory=\"4GB\",\n",
+    "    memory=\"16GB\",\n",
     "    local_directory=\"/tmp\",\n",
-    "    cores=1,\n",
+    "    cores=4,\n",
     "    processes=1,\n",
     "    # diagnostics_port=('127.0.0.1', 8787),\n",
     "    env_extra=['export PYTHONPATH=\"/home/jqs1/projects/matriarch\"'],\n",
@@ -150,8 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster._widget().children[1].children[1].children[0].children[0].layout.width = \"200px\"\n",
-    "cluster"
+    "# cluster = LocalCluster(n_workers=1)\n",
+    "# client = Client(cluster)"
    ]
   },
   {
@@ -160,7 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[w for cluster.running_jobs"
+    "cluster._widget().children[1].children[1].children[0].children[0].layout.width = \"200px\"\n",
+    "cluster"
    ]
   },
   {
@@ -299,6 +300,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "progress(trench_info_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "client.cancel(trench_info_futures)"
    ]
   },
@@ -341,57 +351,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "progress(trench_info_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "trench_info = util.apply_map_futures(\n",
-    "    client.gather, trench_info_futures, predicate=lambda x: x.status == \"error\"\n",
+    "    client.gather, trench_info_futures, predicate=lambda x: x.status == \"finished\"\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "%store trench_info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(trench_info)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(errs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "errs = {k: v[2] for k, v in trench_info.items() if v[2] is not None}\n",
-    "errs"
    ]
   },
   {
@@ -568,7 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FrameStream = ui.DataframeStream.define(\n",
+    "FrameStream = ui.DataFrameStream.define(\n",
     "    \"FrameStream\", selected.index.to_frame(index=False)\n",
     ")\n",
     "frame_stream = FrameStream()\n",
@@ -612,7 +575,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))"
+    "frame = workflow.get_nd2_frame_anyargs(**dict(frame_stream.get_param_values()))"
    ]
   },
   {
@@ -623,7 +586,7 @@
    "source": [
     "tp, diag, _ = diagnostics.wrap_diagnostics(\n",
     "    trench_detection.hough.find_trenches, ignore_exceptions=False\n",
-    ")(frame_rot)"
+    ")(frame)"
    ]
   },
   {
@@ -633,6 +596,15 @@
    "outputs": [],
    "source": [
     "ui.show_plot_browser(diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tp.head(10)"
    ]
   },
   {
@@ -1187,7 +1159,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trench_bboxes[trench_bboxes[(\"info\", \"hough_value\")] > 90].loc[\n",
+    "    IDX[:, :, [\"MCHERRY\"], 0, :, :], :\n",
+    "].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_bboxes.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_trenches_segmentation.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "LabelStream = ui.MultiIndexStream.define(\"LabelStream\", trench_bboxes.index)\n",
+    "# LabelStream = ui.MultiIndexStream.define('LabelStream', labelwise_df2.index)\n",
+    "# LabelStream = ui.MultiIndexStream.define('LabelStream', selected_trenches_segmentation.index)\n",
     "label_stream = LabelStream()\n",
     "\n",
     "box = ui.dataframe_browser(label_stream)\n",
@@ -1204,7 +1207,7 @@
     "%%opts Layout [normalize=False]\n",
     "%%opts Image [width=800 height=150]\n",
     "image_callback = partial(\n",
-    "    workflow.get_trench_set_overlay, get_frame_func=workflow.get_nd2_frame_cached\n",
+    "    ui.get_trench_set_overlay, get_frame_func=workflow.get_nd2_frame_cached\n",
     ")\n",
     "(\n",
     "    ui.trench_set_viewer(\n",
