--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180801 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180801 Trench segmentation.ipynb
@@ -1061,7 +1061,7 @@
    "outputs": [],
    "source": [
     "d2 = labelwise_df.loc[\n",
-    "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\", 2, :, :, :], yfp_cols\n",
+    "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\", 3, :, :, :], yfp_cols\n",
     "]"
    ]
   },
@@ -1078,6 +1078,60 @@
     "        for c in reversed(yfp_cols)\n",
     "    ]\n",
     ").cols(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# labelwise_df.index.get_level_values('position')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class NYCTaxi(hv.streams.Stream):\n",
+    "#     alpha = param.Magnitude(default=0.75, doc=\"Opacity\")\n",
+    "#     colormap = param.ObjectSelector(default=\"fire\", objects=\n",
+    "#         hpu.list_cmaps(category='Uniform Sequential', bg='dark'))\n",
+    "#     location = param.ObjectSelector(default='dropoff', objects=['dropoff', 'pickup'])\n",
+    "\n",
+    "#     def make_view(self, x_range, y_range, **kwargs):\n",
+    "#         pts   = hv.Points(taxi, [self.location+'_x', self.location+'_y'])\n",
+    "#         trips = datashade(pts, cmap=hpu.process_cmap(self.colormap),\n",
+    "#             x_range=x_range, y_range=y_range, dynamic=False, **dopts)\n",
+    "#         return tiles.options(alpha=self.alpha) * trips\n",
+    "# explorer = NYCTaxi(name=\"NYC Taxi Trips\")\n",
+    "# parambokeh.Widgets(explorer, callback=explorer.event)\n",
+    "# hv.DynamicMap(explorer.make_view, streams=[explorer, RangeXY()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Scatter (size=3) [show_legend=False]\n",
+    "def get_plot(pos):\n",
+    "    c = \"YFP_labelwise_p0.9\"\n",
+    "    d = labelwise_df.loc[\n",
+    "        IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\", pos, :, :, :], c\n",
+    "    ]\n",
+    "    return d.hvplot.scatter(\"t\", c, by=\"trench\", width=500, height=300)\n",
+    "\n",
+    "\n",
+    "hv.HoloMap(\n",
+    "    {\n",
+    "        pos: get_plot(pos)\n",
+    "        for pos in labelwise_df.index._get_level_values(1, unique=True)[:20]\n",
+    "    }\n",
+    ")"
    ]
   },
   {
